Upload quality-adapter
